# LHECG-Labeled

./: Cargo.toml  README.md
config/: config.toml
src/: config.rs  decryption.rs  encryption.rs  equalEvalPreprocess.rs  equalizedevaluation.rs  equalizer.rs  evaluation.rs  homomorphic.rs  lib.rs  main.rs  multiThreadEvaluation.rs  parameters.rs  preprocessing.rs  todo.txt  utility.rs
src/data/: d_l_values.txt  preprocessed_encrypted_data.txt
src/keypair/: prime_number.txt
tests/: Correctness.rs  Polynomials.rs  Timing.rs
